[tool.poetry]
name = "studentsolver"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.16.1"
dash-bootstrap-components = "^1.6.0"
nevergrad = "^1.0.2"
fcmaes = "^1.6.5"
ipykernel = "^6.29.4"
dwave-ocean-sdk = "^6.10.0"
dimod = "^0.12.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
